@@ -353,6 +353,13 @@ static void webKitWebAudioSrcLoop(WebKitWebAudioSrc* src)
         auto& buffer = channelBufferList[i];
         unmapGstBuffer(buffer.get());
 
+        // This is enabled only for GStreamer 1.12.5 because of a memory leak that was fixed in that version.
+        // https://bugzilla.gnome.org/show_bug.cgi?id=793067
+        if (webkitGstCheckVersion(1, 12, 5)) {
+            if (priv->bus->channel(i)->isSilent())
+                GST_BUFFER_FLAG_SET(buffer.get(), GST_BUFFER_FLAG_GAP);
+        }
+
         if (failed)
             continue;
 
