@@ -1,3 +1,14 @@
+2018-01-31  Philippe Normand  <pnormand@igalia.com>
+
+        [GStreamer] Silent WebAudio buffers support
+        https://bugs.webkit.org/show_bug.cgi?id=143869
+
+        Reviewed by Carlos Garcia Campos.
+
+        * platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
+        (webKitWebAudioSrcLoop): Flag silent buffers as GAP buffers. This
+        enables downstream elements to optimize the buffer processing.
+
 2018-01-31  Xabier Rodriguez Calvar  <calvaris@igalia.com>
 
         [EME] Fix NavigatorEME::tryNextSupportedConfiguration typo
